projet_GOCass/tests/bad/testfile-for-not-bool.go
package main

func main () { for ("test") {} }
